<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">DboxNotes</string>

    <string name="title_edit_title">Note title:</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">DboxNotes</string>

    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>
    <string name="menu_signin">Link with Dropbox</string>
    <string name="menu_signout">Unlink from Dropbox</string>
    <string name="menu_sync">Synchronize</string>
    <string name="generate_qr">Generate QR code</string>
    <string name="choose_qr_app">Choose QR app</string>
    <string name="menu_scan_qr">Scan QR code</string>
    <string name="menu_folders">Folder</string>
    <string name="menu_all_notes">All Notes</string>
    <string name="menu_root_folder">No folder</string>
    <string name="menu_move_to">Move to</string>
    <string name="button_cancel">Cancel</string>
    <string name="move_to_title">Move to</string>
    <string name="new_folder_hint">New folder name</string>
    <string name="confirm_cloud_delete_message">These notes were deleted in the cloud. Select the ones to delete locally.</string>
    <string name="confirm_cloud_delete_title">Notes deleted in the cloud</string>
</resources>