<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/new_folder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/new_folder_hint">

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/existingFoldersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/okButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_folder_text"
        android:choiceMode="singleChoice">

    </ListView>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_ok" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/okButton"
        android:text="@string/button_cancel" />

</RelativeLayout>