<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/confirm_cloud_delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirm_cloud_delete_message" />

    <ListView
        android:id="@+id/deletedNotesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/okButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/confirm_cloud_delete_text"
        android:choiceMode="multipleChoice">

    </ListView>


    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_ok" />



    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/okButton"
        android:text="@string/button_cancel" />

</RelativeLayout>